--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "redux": "^4.2.0"
   }
 }
