my latest change

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "shopping-cart",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
+    "edgio:dev": "edgio dev",
+    "edgio:build": "edgio build",
+    "edgio:deploy": "edgio deploy",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
+  "name": "myshop",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
     "next": "11.0.0",
@@ -14,5 +17,13 @@
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.2.0"
+  },
+  "devDependencies": {
+    "@edgio/cli": "^6.0.6",
+    "@edgio/core": "^6.0.6",
+    "@edgio/devtools": "^6.0.6",
+    "@edgio/next": "^6.0.6",
+    "@edgio/prefetch": "^6.0.6",
+    "@edgio/react": "^6.0.6"
   }
 }
